# Product-Recommendation-Agent

./: .env  .gitignore  ProductRecommendation_agent.ipynb  README.md  example.db  fashion.csv  main.py  mermaid.py  package-lock.json  pyproject.toml  requirements.txt  streamlit_app.py
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  page.tsx
frontend/app/types/: product.ts
frontend/components/: PropertyCard.tsx
frontend/components/hooks/: use-property.ts
frontend/components/ui/: product-form.tsx  productform.tsx
src/app/: database.py  dependencies.py
src/app/api/v1/endpoints/: chat.py  chat_workflow.py
src/app/logic/: check_attempts_router.py  execute_sql_router.py  get_database_schema.py  llm.py  prompt.py  relevance_router.py  retrieval.py
src/app/models/: chat_models.py
src/app/nodes_and_edges/nodes/: check_relevance.py  convert_nl_sql.py  end_max_iterations.py  execute_sql.py  get_current_user.py  human_readable_answer.py  irrelevant.py  llm_node.py  prompt_node.py  regenerate_query.py  retrieval_node.py
src/app/states/: rag_state.py
src/app/test/: test_check_relevance.py  test_convert_nl_sql.py  test_end_max_iterations.py  test_execute_sql.py  test_get_current_user.py  test_human_readable_answer.py  test_irrelevant.py
src/app/workflows/: rag_workflow.py  text2sql_workflow.py
tests/: conftest.py
tests/nodes/: test_llm_node.py  test_prompt_node.py  test_retrieval_node.py
